GNOME Bugzilla – Bug 648025
parse-launch: don't unescape inside quotes
Last modified: 2011-06-15 17:29:39 UTC
Escaped characters inside quoted strings are supposed to be unescaped by deserialization functions, not by parsing functions.
Created attachment 186149 [details] [review] Bug fix + test case for the bug report
This looks like it could fail if you have a string like "bla\"bla". The second " would change the state to !in_quotes although it shouldn't because of the \. Could you add a test for that too please?
Created attachment 186394 [details] [review] Bug fix + test case for the bug report You were right Sebastian, i was missing that case. Now it works and also i added a new test case.
Thanks, I'll push this after release.
commit f450817d7f3a1dc46d481f7a2285fa0fb451132f Author: Miguel Angel Cabrera Moya <madmac2501@gmail.com> Date: Wed Apr 20 22:52:36 2011 +0200 parse: don't unescape inside quotes Escaped characters inside quoted strings are supposed to be unescaped by deserialization functions, not by parsing functions. https://bugzilla.gnome.org/show_bug.cgi?id=648025